<resources>
    <string name="app_name">WeatherApp</string>

    <string name="search_places">Search places</string>
    <string name="demo_date">4 March, 6:48 pm</string>
    <string name="default_numbers">100</string>
    <string name="pressure">Pressure</string>
    <string name="max_temp">Max temp.</string>
    <string name="humidity">Humidity</string>
    <string name="min_temp">Min temp.</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature_in_f">Temperature in F</string>
    <string name="day">Day 17</string>
    <string name="night">Night 9</string>
    <string name="main_temp">16*</string>
    <string name="feels_like">Feels like 16*</string>
    <string name="weather_type">Drizzle</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
</resources>